added all styles for section team

--- a/teams.html
+++ b/teams.html
@@ -75,12 +75,12 @@
                 </div>
             </div>
 
-            <div class="swiper teamswiper swiperscale">
+            <div class="swiper teamswiper swiperview">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_02.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
+                            <p class="card__text--info">prof. dr hab</p>
                             <p class="card__text--info">Aleksander Malinowski</p>
                             <div class="line"></div>
                         </div>
@@ -90,8 +90,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_03.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr hab n. med.</p>
+                            <p class="card__text--info">Halina Wiśniewska</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -100,8 +100,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_04.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr hab n. med.</p>
+                            <p class="card__text--info">Beata Mielczarek</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -110,8 +110,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_05.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr hab n. med.</p>
+                            <p class="card__text--info">Paweł Kołacz</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -120,8 +120,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_06.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr n. med.</p>
+                            <p class="card__text--info">Ewa Samson</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -130,8 +130,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_07.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr n. med.</p>
+                            <p class="card__text--info">Robert Zalewski</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -140,8 +140,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_08.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">dr n. med.</p>
+                            <p class="card__text--info">Milena Kalkowska</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -150,8 +150,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_09.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">lek. med.</p>
+                            <p class="card__text--info">Anna Baczyńska</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -160,8 +160,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_10.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">lek. med.</p>
+                            <p class="card__text--info">Marek Pietrzyk</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -170,8 +170,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_11.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">lek. med.</p>
+                            <p class="card__text--info">Hasmukh Madnashini</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
@@ -180,8 +180,8 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_14.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">prof dr hab</p>
-                            <p class="card__text--info">Aleksander Malinowski</p>
+                            <p class="card__text--info">plek. med.</p>
+                            <p class="card__text--info">Katarzyna Adamczyk</p>
                             <div class="line"></div>
                         </div>
                         <i class="fa-solid fa-square-xmark crosscard"></i>
