prepared html for section contact

--- a/galleryobj.html
+++ b/galleryobj.html
@@ -40,7 +40,7 @@
                 <a href="./index.html#Offer" class="navbar__link">Oferta</a>
                 <a href="./teams.html" class="navbar__link">Zespół</a>
                 <a href="./index.html#Opinions" class="navbar__link">Opinie</a>
-                <a href="#" class="navbar__link">Kotakt</a>
+                <a href="./contact.html" class="navbar__link">Kontakt</a>
             </div>
             <div class="burger">
                 <i class="fa-solid fa-bars"></i>
