--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,39 @@
 
     <main>
 
-        <section class="contact"></section>
+        <section class="contact">
+
+            <div class="wrapper">
+                <form class="box">
+                    <div class="contactbox">
+                        <label for="name">Podaj swoje imię:</label>
+                        <input type="text" id="name" name="name" placeholder="wpisz swoje imię">
+                        <p class="errorname"></p>
+                    </div>
+                    <div class="contactbox">
+                        <label for="email">Podaj swój email:</label>
+                        <input type="email" id="email" name="email" placeholder="wpisz swoje imię">
+                        <p class="errormail"></p>
+                    </div>
+                    <div class="contactbox">
+                        <label for="ems">Twoja wiadomość:</label>
+                        <textarea name="msg" id="msg" class="textarea" placeholder="wpisz wiadomość"></textarea>
+                        <p class="errortext"></p>
+                    </div>
+
+                    <div class="btncontact">
+                        <button class="btnsend">wyślij</button>
+                        <button class="clean">wyczyść</button>
+                    </div>
+                </form>
+                <div class="status">
+                    <p class="statusinfo"></p>
+                </div>
+
+
+
+            </div>
+        </section>
 
     </main>
 
