added style in labels

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                         <button class="clean">wyczyść</button>
                     </div>
                 </form>
-                <div class="status">
+                <div class="status senderror">
                     <p class="statusinfo">Błąd wysyłki</p>
                 </div>
 
