added styles on buttons in section contact

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="contactbox">
                         <label for="email">Podaj swój email:</label>
-                        <input type="email" id="email" name="email" placeholder="wpisz swoje imię">
+                        <input type="email" id="email" name="email" placeholder="wpisz swój email">
                         <p class="errormail">error</p>
                     </div>
                     <div class="contactbox">
@@ -73,11 +73,11 @@
                         <p class="errortext">error</p>
                     </div>
 
-                    <div class="btncontact">
-                        <button class="btnsend">wyślij</button>
-                        <button class="clean">wyczyść</button>
-                    </div>
                 </form>
+                <div class="btncontact">
+                    <button class="btnsend">wyślij</button>
+                    <button class="clean">wyczyść</button>
+                </div>
                 <div class="status senderror">
                     <p class="statusinfo">Błąd wysyłki</p>
                 </div>
