corrected text in section teams

--- a/teams.html
+++ b/teams.html
@@ -180,7 +180,7 @@
                     <div class="swiper-slide card">
                         <img src="./img/teams/doc_14.jpg" alt="" class="card__img">
                         <div class="card__text">
-                            <p class="card__text--info">plek. med.</p>
+                            <p class="card__text--info">lek. med.</p>
                             <p class="card__text--info">Katarzyna Adamczyk</p>
                             <div class="line"></div>
                         </div>
