preparig html for code js in section contact

--- a/contact.html
+++ b/contact.html
@@ -60,17 +60,17 @@
                     <div class="contactbox">
                         <label for="name">Podaj swoje imię:</label>
                         <input type="text" id="name" name="name" placeholder="wpisz swoje imię">
-                        <p class="errorname">error</p>
+                        <p class="errorname"></p>
                     </div>
                     <div class="contactbox">
                         <label for="email">Podaj swój email:</label>
                         <input type="email" id="email" name="email" placeholder="wpisz swój email">
-                        <p class="errormail">error</p>
+                        <p class="errormail"></p>
                     </div>
                     <div class="contactbox">
                         <label for="ems">Twoja wiadomość:</label>
                         <textarea name="msg" id="msg" class="textarea" placeholder="wpisz wiadomość"></textarea>
-                        <p class="errortext">error</p>
+                        <p class="errortext"></p>
                     </div>
 
                 </form>
@@ -78,8 +78,8 @@
                     <button class="btnsend">wyślij</button>
                     <button class="clean">wyczyść</button>
                 </div>
-                <div class="status senderror">
-                    <p class="statusinfo">Błąd wysyłki</p>
+                <div class="status">
+                    <p class="statusinfo"></p>
                 </div>
 
 
