first action js in section contact

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 </form>
                 <div class="btncontact">
                     <button class="btnsend">wyślij</button>
-                    <button class="clean">wyczyść</button>
+                    <button class="btnclean">wyczyść</button>
                 </div>
                 <div class="status">
                     <p class="statusinfo"></p>
