--- a/contact.html
+++ b/contact.html
@@ -60,17 +60,17 @@
                     <div class="contactbox">
                         <label for="name">Podaj swoje imię:</label>
                         <input type="text" id="name" name="name" placeholder="wpisz swoje imię">
-                        <p class="errorname"></p>
+                        <p class="errorname">error</p>
                     </div>
                     <div class="contactbox">
                         <label for="email">Podaj swój email:</label>
                         <input type="email" id="email" name="email" placeholder="wpisz swój email">
-                        <p class="errormail"></p>
+                        <p class="errormail">error</p>
                     </div>
                     <div class="contactbox">
                         <label for="ems">Twoja wiadomość:</label>
                         <textarea name="msg" id="msg" class="textarea" placeholder="wpisz wiadomość"></textarea>
-                        <p class="errortext"></p>
+                        <p class="errortext">error</p>
                     </div>
 
                 </form>
