change kit closed cards in section teams

--- a/teams.html
+++ b/teams.html
@@ -84,7 +84,7 @@
                             <p class="card__text--info">Aleksander Malinowski</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -94,7 +94,7 @@
                             <p class="card__text--info">Halina Wiśniewska</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -104,7 +104,7 @@
                             <p class="card__text--info">Beata Mielczarek</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -114,7 +114,7 @@
                             <p class="card__text--info">Paweł Kołacz</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -124,7 +124,7 @@
                             <p class="card__text--info">Ewa Samson</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -134,7 +134,7 @@
                             <p class="card__text--info">Robert Zalewski</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -144,7 +144,7 @@
                             <p class="card__text--info">Milena Kalkowska</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -154,7 +154,7 @@
                             <p class="card__text--info">Anna Baczyńska</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -164,7 +164,7 @@
                             <p class="card__text--info">Marek Pietrzyk</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -174,7 +174,7 @@
                             <p class="card__text--info">Hasmukh Madnashini</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                     <div class="swiper-slide card">
@@ -184,7 +184,7 @@
                             <p class="card__text--info">Katarzyna Adamczyk</p>
                             <div class="line"></div>
                         </div>
-                        <i class="fa-solid fa-square-xmark crosscard"></i>
+                        <i class="fa-solid fa-xmark crosscard"></i>
                     </div>
 
                 </div>
