preparing html for footer

--- a/index.html
+++ b/index.html
@@ -342,6 +342,34 @@
 
     </main>
 
+    <footer>
+        <div class="wrapper">
+            <div class="info">
+                <h1 class="info__headig">MedClinic</h1>
+                <div class="address">
+                    <p><i class="fa-solid fa-phone"></i> 688688608</p>
+                    <p><i class="fa-solid fa-location-dot"></i> Łódź 00-001 ul. Piotrkowska
+                        785</p>
+                    <p class="navcontact__mail"><i class="fa-regular fa-envelope"></i> medclinic@mail.pl</p>
+                </div>
+                <div class="media">
+                    <div class="media__heading">
+                        <h3 class="media__heading--head">Szukaj nas też:</h3>
+                    </div>
+                    <div class="media__socialmedia">
+                        <i class="fa-brands fa-square-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="years">
+                <p class="years">&copy; <span class="year"></span></p>
+            </div>
+        </div>
+
+    </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
