corrected text html ini section teams

--- a/teams.html
+++ b/teams.html
@@ -55,7 +55,7 @@
     <main>
         <section class="sectionteams">
             <div class="heading">
-                <h1>Poznaj nasz zespół</h1>
+                <h1>Poznaj nasz <span>zespół</span></h1>
                 <div class="line"></div>
             </div>
             <div class="teams">
