--- a/index.html
+++ b/index.html
@@ -345,17 +345,15 @@
     <footer>
         <div class="wrapper">
             <div class="info">
-                <h1 class="info__headig">MedClinic</h1>
+                <h1 class="info__heading">Med<span>Clinic</span></h1>
                 <div class="address">
-                    <p><i class="fa-solid fa-phone"></i> 688688608</p>
+                    <p><i class="fa-solid fa-phone"></i> 688 688 608</p>
                     <p><i class="fa-solid fa-location-dot"></i> Łódź 00-001 ul. Piotrkowska
                         785</p>
                     <p class="navcontact__mail"><i class="fa-regular fa-envelope"></i> medclinic@mail.pl</p>
                 </div>
                 <div class="media">
-                    <div class="media__heading">
-                        <h3 class="media__heading--head">Szukaj nas też:</h3>
-                    </div>
+                    <h3 class="media__heading">Szukaj nas też:</h3>
                     <div class="media__socialmedia">
                         <i class="fa-brands fa-square-facebook"></i>
                         <i class="fa-brands fa-twitter"></i>
