added styles small for footer

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="address">
                     <div class="address__box">
                         <p><i class="fa-solid fa-phone"></i> 688 688 608</p>
-                        <p><i class="fa-solid fa-location-dot"></i> Łódź 00-001 ul. Piotrkowska
+                        <p><i class="fa-solid fa-map-location-dot"></i> Łódź 00-001 ul. Piotrkowska
                             785</p>
                         <p><i class="fa-regular fa-envelope"></i> medclinic@mail.pl</p>
                     </div>
