corrected html and css for footer

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
 
     <footer>
         <div class="wrapper">
+            <h1 class="heading">Med<span>Clinic</span></h1>
             <div class="info">
-                <h1 class="info__heading">Med<span>Clinic</span></h1>
                 <div class="address">
                     <div class="address__box">
                         <p><i class="fa-solid fa-phone"></i> 688 688 608</p>
