--- a/teams.html
+++ b/teams.html
@@ -195,6 +195,35 @@
         </section>
     </main>
 
+    <footer>
+        <div class="wrapper">
+            <h1 class="heading">Med<span>Clinic</span></h1>
+            <div class="info">
+                <div class="address">
+                    <div class="address__box">
+                        <p><i class="fa-solid fa-phone"></i> 688 688 608</p>
+                        <p><i class="fa-solid fa-map-location-dot"></i> Łódź 00-001 ul. Piotrkowska
+                            785</p>
+                        <p><i class="fa-regular fa-envelope"></i> medclinic@mail.pl</p>
+                    </div>
+                </div>
+                <div class="media">
+                    <div class="media__box">
+                        <h3 class="media__box--heading">Szukaj nas też:</h3>
+                        <div class="media__box--socialmedia">
+                            <i class="fa-brands fa-square-facebook"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-square-instagram"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="years">
+                <p class="years">&copy; <span class="year"></span></p>
+            </div>
+        </div>
+
+    </footer>
 
 
 
