--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="mainpage">
 
     <nav>
         <div class="navcontact">
@@ -35,7 +35,7 @@
                 <a href="#Home"><img src="./img/logo.png" alt="logo"></a>
             </div>
             <div class="navbar">
-                <a href="#Home" class="navbar__link">Home</a>
+                <a href="#Home" class="navbar__link scrollactive">Home</a>
                 <a href="#Aboutus" class="navbar__link">O nas</a>
                 <a href="#Offer" class="navbar__link">Oferta</a>
                 <a href="./teams.html" class="navbar__link">Zespół</a>
