--- a/teams.html
+++ b/teams.html
@@ -39,7 +39,7 @@
                 <a href="./index.html#Home" class="navbar__link">Home</a>
                 <a href="./index.html#Aboutus" class="navbar__link">O nas</a>
                 <a href="./index.html#Offer" class="navbar__link">Oferta</a>
-                <a href="#" class="navbar__link">Zespół</a>
+                <a href="#" class="navbar__link scrollactive">Zespół</a>
                 <a href="./index.html#Opinions" class="navbar__link">Opinie</a>
                 <a href="./contact.html" class="navbar__link">Kotakt</a>
             </div>
