--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 
     <main>
-        <section class="sectionhome" id="Home">
+        <section class="sectionhome section" id="Home">
             <div class="info">
                 <div class="info__heading">
                     <h1 class="info__heading--head">Med<span class="pink">Clinic</span></h1>
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section class="sectionaboutus" id="Aboutus">
+        <section class="sectionaboutus section" id="Aboutus">
 
             <div class="infomobile">
                 <div class="infocount">
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <section class="sectionoffer" id="Offer">
+        <section class="sectionoffer section" id="Offer">
             <div class="boxheading">
                 <h1 class="boxheading__heading">Sprawdź naszą <span>ofertę i cennik</span></h1>
                 <div class="line"></div>
@@ -253,7 +253,7 @@
             </div>
         </section>
 
-        <section class="sectionopinions" id="Opinions">
+        <section class="sectionopinions section" id="Opinions">
             <div class="heading">
                 <h1 class="heading__head">Opinie naszych <span>pacjentów</span></h1>
                 <div class="line"></div>
@@ -375,6 +375,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/scrollspy.js"></script>
 </body>
 
 </html>
