added js for scrollspy

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="mainpage">
+<body>
 
     <nav>
         <div class="navcontact">
@@ -35,11 +35,11 @@
                 <a href="#Home"><img src="./img/logo.png" alt="logo"></a>
             </div>
             <div class="navbar">
-                <a href="#Home" class="navbar__link scrollactive">Home</a>
-                <a href="#Aboutus" class="navbar__link">O nas</a>
-                <a href="#Offer" class="navbar__link">Oferta</a>
+                <a href="#Home" class="navbar__link home scrollactive">Home</a>
+                <a href="#Aboutus" class="navbar__link about">O nas</a>
+                <a href="#Offer" class="navbar__link offer">Oferta</a>
                 <a href="./teams.html" class="navbar__link">Zespół</a>
-                <a href="#Opinions" class="navbar__link">Opinie</a>
+                <a href="#Opinions" class="navbar__link opinions">Opinie</a>
                 <a href="./contact.html" class="navbar__link">Kontakt</a>
             </div>
             <div class="burger">
